[gd_scene load_steps=9 format=3 uid="uid://ded4ph1jk1pwg"]

[ext_resource type="Script" path="res://Scripts/tower.gd" id="1_hhmri"]

[sub_resource type="BoxMesh" id="BoxMesh_base"]
size = Vector3(1, 2, 1)

[sub_resource type="BoxMesh" id="BoxMesh_outline"]
size = Vector3(1.1, 2.1, 1.1)

[sub_resource type="CylinderMesh" id="CylinderMesh_range"]
top_radius = 5.0
bottom_radius = 5.0
height = 0.1

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_range"]
transparency = 1
albedo_color = Color(0.2, 0.8, 1, 0.2)

[sub_resource type="SphereShape3D" id="SphereShape3D_detection"]
radius = 5.0

[sub_resource type="BoxShape3D" id="BoxShape3D_tower"]
size = Vector3(1, 2, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_click"]
size = Vector3(1.1, 2.1, 1.1)

[node name="Tower" type="StaticBody3D" groups=["towers"]]
collision_layer = 2
collision_mask = 0
script = ExtResource("1_hhmri")

[node name="Base" type="Node3D" parent="."]

[node name="TowerMesh" type="MeshInstance3D" parent="Base"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
mesh = SubResource("BoxMesh_base")

[node name="OutlineEffect" type="MeshInstance3D" parent="Base"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
visible = false
mesh = SubResource("BoxMesh_outline")

[node name="RangeIndicator" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.05, 0)
visible = false
mesh = SubResource("CylinderMesh_range")
surface_material_override/0 = SubResource("StandardMaterial3D_range")

[node name="DetectionArea" type="Area3D" parent="."]
collision_layer = 2
collision_mask = 4

[node name="CollisionShape3D" type="CollisionShape3D" parent="DetectionArea"]
shape = SubResource("SphereShape3D_detection")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("BoxShape3D_tower")

[node name="ClickArea" type="Area3D" parent="."]
collision_layer = 16
collision_mask = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="ClickArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("BoxShape3D_click")